WIP: dynamic language choice (this segfaults randomly)